--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -11,7 +11,9 @@ sql:
       go:
         package: "database"
         out: "./database"
-        query_parameter_limit: 5
+        query_parameter_limit: 2 
+        emit_pointers_for_null_types: true
+        emit_json_tags: true
 plugins: []
 rules: []
 options: {}
